<resources>
    <string name="app_name">events</string>
    <string name="no_events">No events recorded as yet</string>
    <string name="eventStart">Event starting</string>
    <string name="eventEnd">Event ending</string>
    <string name="location">Location</string>
    <string name="event_links">Links</string>
    <string name="visit_link">Visit Link</string>
    <string name="watch_video">Watch Video</string>
    <string name="guests">Guests</string>
    <string name="google_maps_key">AIzaSyDg9P3CDg68ll9JyuBjT3JCE0TqwSwoYDo</string>
</resources>
