<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ios_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eventBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/main_calendar"
            android:visibility="gone" />

        <LinearLayout
            style="@style/block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eventName"
                style="@style/block_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <net.innoflash.iosview.lists.ListItemView2
                        android:id="@+id/eventStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        app:liv2_circular_image="false"
                        app:liv2_content_text="@string/loading"
                        app:liv2_head_text="@string/eventStart"
                        app:liv2_header_color="@color/ios_blue"
                        app:liv2_icon="@drawable/main_calendar"
                        app:liv2_icon_padding="15dp" />

                    <net.innoflash.iosview.lists.ListItemView2
                        android:id="@+id/eventEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        app:liv2_circular_image="false"
                        app:liv2_content_text="@string/loading"
                        app:liv2_head_text="@string/eventEnd"
                        app:liv2_header_color="@color/ios_blue"
                        app:liv2_icon="@drawable/main_calendar"
                        app:liv2_icon_padding="15dp" />

                    <TextView
                        android:id="@+id/eventDescription"
                        style="@style/helvetica_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loading" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/block_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <net.innoflash.iosview.lists.ListItemView3
                        android:id="@+id/eventLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        app:item_circular_image="false"
                        app:item_icon="@drawable/map_spotter"
                        app:item_icon_padding="15dp" />
                    <fragment
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/hasUrls"
                style="@style/block_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_links" />

            <androidx.cardview.widget.CardView
                android:id="@+id/linksWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <net.innoflash.iosview.lists.ListItemView
                        android:id="@+id/eventLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        app:liv_circular_image="false"
                        app:liv_icon="@drawable/external_link"
                        app:liv_icon_padding="@dimen/dimen10"
                        app:liv_text="@string/visit_link" />

                    <net.innoflash.iosview.lists.ListItemView
                        android:id="@+id/eventVideoLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        app:liv_circular_image="false"
                        app:liv_icon="@drawable/video_link"
                        app:liv_icon_padding="@dimen/dimen10"
                        app:liv_text="@string/watch_video" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/hasGuests"
                style="@style/block_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guests" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventGuests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen30"
                android:background="@color/white" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>